Couple of fixes for the calendar on mobile
Don't include the 4em margin on small widths.  On small widths, only
show the banner on the home page.

These changes make it much easier to see the events once you've
clicked on them.

--- a/events/scss/events.scss
+++ b/events/scss/events.scss
@@ -34,7 +34,9 @@ html#calendar {
     }
 
     .month {
-        margin-top: 4rem;
+        @include not-small-screen {
+            margin-top: 4rem;
+        }
         h2 {
             text-align: center;
         }
